--- a/geral.css
+++ b/geral.css
@@ -1,36 +1,48 @@
 #calculadora {
- background: green
- width: 200px;
- padding: 10px;
-  text-align: center;
-  border-radius: 10px
+    background: rgb(77, 216, 77);
+    width: 200px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
 }
-#calculadora input{
- background: black;
- color: white;
- padding: 5px;
- border-radius: 5px;
+#calculadora input {
+    background: rgb(54, 236, 124);
+    color: rgb(0, 0, 0);
+    padding: 5px;
+    border-radius: 5px;
 }
-
 #sptotal {
-background: black;
-color: lime;
-padding: 10px;
-border-radius: 10px;
-margin-bottom:10px; 
+    background: rgba(228, 125, 125, 0.767);
+    color: rgb(0, 255, 85);
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
-
-#calculadora button{
-background: chocolate;
-color: gray;
-padding: 5px
-border-radius: 5px; 
-margin-top: 10px;
+#calculadora button {
+    background: rgb(6, 141, 17);
+    color: rgb(255, 255, 255);
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 10px;
 }
-
 #calculadora button:hover{
-background: white;
-color: black;
-cursor: pointer;
+    background: rgb(236, 222, 212);
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+}
+ h3 {
+     color:brown;
+ }
+ .calcF{
+  display: none;
 
+ }
+
+ #input-calcF{
+    display: none;
+
+}
+#input-calcF:checked + #calculadora .calcF {
+    display:block;
 }
