--- a/geral.css
+++ b/geral.css
@@ -62,3 +62,34 @@
 #input-calcF:checked + #calculadora .calcF {
     display:block;
 }
+
+#calculadoraESC {
+    background: rgb(77, 216, 77);
+    width: 200px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 5px 5px yellowgreen;
+}
+#calculadoraESC input:focus{
+    color:rgb(0, 0, 0);
+    background: rgb(0, 192, 176);
+}
+#calculadoraESC input {
+    background: rgb(54, 236, 124);
+    color: rgb(0, 0, 0);
+    padding: 5px;
+    border-radius: 5px;
+}
+#calculadoraESC button {
+    background: rgb(6, 141, 17);
+    color: rgb(255, 255, 255);
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+#calculadoraESC button:hover{
+    background: rgb(236, 222, 212);
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+}
